
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gee-pipeline"
version = "0.1.0"
description = "Modular GEE data collection pipeline with Jupyter-friendly APIs, logging, and reports."
authors = [{name = "USyd PAHGISL"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "earthengine-api>=0.1.400",
    "geemap>=0.31.0",
    "folium>=0.15.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "pandas>=2.2.0",
    "fiona>=1.9.0",
    "matplotlib>=3.8.0",
    "ipython>=8.0.0",
    "ipywidgets>=8.0.0",
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "mypy"]
sof = [
  "rasterio>=1.3",
  "geopandas>=0.13",
  "shapely>=2.0",
  "pyproj>=3.4"
]
silo = []

